# abandon-workflow

./: .gitignore  README.md  WINDOWS_DEV.md  index.html  launch.command  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-ios.yml  build-macos-internal.yml  build-macos.yml  deploy-download-page.yml
docs/: apple-distribution.md
public/: manifest.webmanifest  sw.js
scripts/: Set-WindowsTauriEnv.ps1  build-and-sign.sh  build-ios-adhoc.sh  windows-build.ps1  windows-dev.ps1
site/: app.js  index.html  styles.css
site/data/: releases.js  releases.json
site/pwa/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
site/pwa/assets/: index--6_zMa4L.css  index-B8rbb-e6.js  index-BlTDdzHG.css  index-Blxy9Bwo.js  index-CX7Py7SX.js  index-D1cmvmLa.js  index-ErU3gqBE.css  index-JqpnthJe.js  index-Z_5_DYhN.js  index-areVrEUf.css  index-tBsgoz7V.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_sync.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  config.rs  dictionary.rs  hotkey.rs  mod.rs  sync.rs  translation.rs  tts.rs  wordbook.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/hotkey/: mod.rs  mod.rs.bak
src-tauri/src/tray/: mod.rs  tray.rs
src/components/FloatingWindow/: index.tsx
src/components/LearningHistory/: index.tsx
src/hooks/: useTheme.ts
src/services/: api.ts  browserApi.ts  runtime.ts
src/stores/: appStore.ts  themeStore.ts  wordbookStore.ts
src/styles/: globals.css
src/types/: index.ts
(+7 files in other folders)
